--- a/src/qt/forms/masternodelist.ui
+++ b/src/qt/forms/masternodelist.ui
@@ -46,8 +46,11 @@
      </item>
      <item>
       <widget class="QTabWidget" name="tabWidget">
+       <property name="tabShape">
+        <enum>QTabWidget::Rounded</enum>
+       </property>
        <property name="currentIndex">
-        <number>0</number>
+        <number>1</number>
        </property>
        <widget class="QWidget" name="tabMyMasternodes">
         <attribute name="title">
@@ -219,6 +222,9 @@
         <layout class="QGridLayout" name="gridLayout">
          <item row="1" column="0" rowspan="2" colspan="2">
           <layout class="QHBoxLayout" name="horizontalLayout_3">
+           <property name="rightMargin">
+            <number>10</number>
+           </property>
            <property name="bottomMargin">
             <number>0</number>
            </property>
@@ -233,6 +239,15 @@
             <widget class="QLineEdit" name="filterLineEdit">
              <property name="toolTip">
               <string>Filter masternode list</string>
+             </property>
+             <property name="styleSheet">
+              <string notr="true">#filterLineEdit{background-color: rgba(67,67,67,0.5);
+ height: 18px !important;
+    font-size: 13px;
+    border-radius: 9px;}</string>
+             </property>
+             <property name="class" stdset="0">
+              <string>LineEditSmall</string>
              </property>
             </widget>
            </item>
@@ -273,11 +288,11 @@
            <property name="alternatingRowColors">
             <bool>true</bool>
            </property>
-           <property name="selectionBehavior">
-            <enum>QAbstractItemView::SelectRows</enum>
-           </property>
            <property name="selectionMode">
             <enum>QAbstractItemView::NoSelection</enum>
+           </property>
+           <property name="selectionBehavior">
+            <enum>QAbstractItemView::SelectRows</enum>
            </property>
            <property name="sortingEnabled">
             <bool>true</bool>
@@ -339,6 +354,9 @@
         <layout class="QGridLayout" name="gridLayout_3">
          <item row="1" column="0">
           <layout class="QHBoxLayout" name="horizontalLayout_4">
+           <property name="rightMargin">
+            <number>5</number>
+           </property>
            <property name="bottomMargin">
             <number>0</number>
            </property>
@@ -353,6 +371,9 @@
             <widget class="QLineEdit" name="filterLineEditDIP3">
              <property name="toolTip">
               <string>Filter masternode list</string>
+             </property>
+             <property name="class" stdset="0">
+              <string>LineEditSmall</string>
              </property>
             </widget>
            </item>
