--- a/src/qt/forms/overviewpage.ui
+++ b/src/qt/forms/overviewpage.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>960</width>
-    <height>466</height>
+    <height>493</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -793,7 +793,7 @@
                  </size>
                 </property>
                 <property name="styleSheet">
-                 <string notr="true">border-image: url(&quot;:/icons/pac/info&quot;);</string>
+                 <string notr="true">border-image: url(&quot;:/icons/drkblue/info&quot;);</string>
                 </property>
                 <property name="text">
                  <string/>
