--- a/src/qt/res/css/drkblue.css
+++ b/src/qt/res/css/drkblue.css
@@ -145,6 +145,10 @@ QProgressBar::chunk {
 QStatusBar{
     background-color: rgb(10,10,10) !important;
 }
+QStatusBar::item{
+    border: none;
+}
+
 /* Global with classes */
 [class="container"]{
     background-color: rgba(0,0,0,0.5); 
