--- a/src/qt/res/css/drkblue.css
+++ b/src/qt/res/css/drkblue.css
@@ -426,7 +426,57 @@ QPushButton:pressed {
     border: 0px !important;
     color: rgb(243,232,56) !important;
 }
-/* Style of buttons with classes */
+/* Global with classes */
+[class="container"]{
+    background-color: rgba(0,0,0,0.5); 
+    border: 0px !important;
+}
+[class="containerSmall"]{
+    background-color: rgba(51,51,51,0.4);
+    border: 0px !important;
+    border-radius: 7px;
+}
+[class="LineEdit"], [class="LineEdit_PacCoins"], [class="LineEditSmall"]{
+    border: 0px;
+    outline:0;
+    padding:3px;
+    background-color: rgba(67,67,67,0.5);
+    color: #fff;
+}
+[class="LineEdit"], [class="LineEdit_PacCoins"]{
+    height: 40px !important;
+    font-size: 15px;
+    border-radius: 20px;
+}
+[class="LineEditMedium"]{
+    height: 28px !important;
+    font-size: 13px;
+    border-radius: 14px;
+    text-align: center;
+}
+[class="LineEditSmall"]{
+    height: 18px !important;
+    font-size: 13px;
+    border-radius: 9px;
+}
+[class="LineEdit"]:focus, [class="LineEditSmall"]:focus, [class="LineEditMedium"]:focus {
+    font-size:12px;
+}
+[class="LineEdit"]:disabled, [class="LineEditSmall"]:disabled, [class="LineEditMedium"]:disabled {
+    background-color:#474747;
+    color: #878787;
+}
+[class="QuickButton"]{
+    background-color: transparent;
+    border: none;
+    border-radius: 10px;
+}
+[class="SpinBoxSmall"], [class="ComboBoxSmall"]{
+    border-radius: 10px !important;
+    font-size: 12px !important;
+    min-width: 40px !important;
+    min-height:20px !important;
+}
 
 [class="SmallButton"]{
     border-radius: 8px;
