Transaction page tables UI fix

--- a/src/qt/res/css/drkblue.css
+++ b/src/qt/res/css/drkblue.css
@@ -700,7 +700,9 @@ QLineEdit#addressWidget, QLineEdit#tAmountWidget, QComboBox#dateWidget, QComboBo
     border:0px;
     min-height: 24px !important;
 }
-
+#addressWidget{
+    height: 30px;
+}
 /*
  * Private Page
  */
