Transaction details UI

--- a/src/qt/res/css/drkblue.css
+++ b/src/qt/res/css/drkblue.css
@@ -703,6 +703,11 @@ QLineEdit#addressWidget, QLineEdit#tAmountWidget, QComboBox#dateWidget, QComboBo
 #addressWidget{
     height: 30px;
 }
+#detailText{
+    background: #7f7f7f;
+    color: white;
+    border-radius: 7px;
+}
 /*
  * Private Page
  */
